--- a/sass/variables/_index.scss
+++ b/sass/variables/_index.scss
@@ -2,3 +2,6 @@ $breakpoint-sm: 31em;
 $breakpoint-md: 56em;
 $breakpoint-lg: 67em;
 $breakpoint-xlg: 87.5em;
+
+$color-of-success: rgb(97, 226, 97);
+$color-of-failure: #5477e7;
