--- a/sass/modal/_index.scss
+++ b/sass/modal/_index.scss
@@ -7,10 +7,18 @@
     letter-spacing: 1px;
 
     h2 {
-      font-size: 1.1rem;
+      text-align: center;
     }
     p {
       font-size: 0.9rem;
+    }
+
+    #result-lost {
+      color: $color-of-failure;
+    }
+
+    #result-won {
+      color: $color-of-success;
     }
 
     @media (min-width: $breakpoint-lg) {
