--- a/public/style.css
+++ b/public/style.css
@@ -446,26 +446,29 @@ nav .button.collection-button:active {
   }
 }
 
-.modal .result {
+.blocker {
+  z-index: 10 !important;
+}
+.blocker .modal .result {
   color: #000;
   font-family: DotGothic16;
   letter-spacing: 1px;
 }
-.modal .result h2 {
+.blocker .modal .result h2 {
   text-align: center;
 }
-.modal .result p {
+.blocker .modal .result p {
   font-size: 0.9rem;
 }
 @media (min-width: 67em) {
-  .modal .result h2 {
+  .blocker .modal .result h2 {
     font-size: 3rem;
   }
-  .modal .result p {
+  .blocker .modal .result p {
     font-size: 2rem;
   }
 }
-.modal.card {
+.blocker .modal.card {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 140px 1fr;
@@ -480,7 +483,7 @@ nav .button.collection-button:active {
   font-weight: 700;
   position: relative;
 }
-.modal.card .audio-indicator {
+.blocker .modal.card .audio-indicator {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.9));
   backdrop-filter: blur(3px);
   padding: 0.3rem;
@@ -491,42 +494,42 @@ nav .button.collection-button:active {
   top: 0;
   left: 0;
 }
-.modal.card .image {
+.blocker .modal.card .image {
   grid-column: 1/2;
   grid-row: 1/2;
   background: no-repeat center center/cover;
   margin: 0 auto;
 }
-.modal.card .name {
+.blocker .modal.card .name {
   padding-bottom: 1rem;
   font-size: 1.3rem;
   letter-spacing: 0.4rem;
   text-shadow: 1px 1px rgba(255, 255, 255, 0.6);
   margin: 0;
 }
-.modal.card .attributes {
+.blocker .modal.card .attributes {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding-bottom: 1rem;
 }
-.modal.card .attributes .attribute-header {
+.blocker .modal.card .attributes .attribute-header {
   grid-column: 1/2;
   text-align: end;
 }
-.modal.card .attributes .attribute-value {
+.blocker .modal.card .attributes .attribute-value {
   text-align: start;
   margin-left: 1rem;
 }
-.modal.card .attributes hr {
+.blocker .modal.card .attributes hr {
   grid-column: 1/3;
   border-bottom: solid 1px black;
   max-width: 100%;
   width: 100%;
 }
-.modal.card .tab-button-bar {
+.blocker .modal.card .tab-button-bar {
   pointer-events: none;
 }
-.modal.card #to-left-arrow {
+.blocker .modal.card #to-left-arrow {
   font-size: 7vh;
   cursor: pointer;
   font-weight: 100;
@@ -537,29 +540,29 @@ nav .button.collection-button:active {
   top: 40%;
   left: 0;
 }
-.modal.card #to-left-arrow:active {
+.blocker .modal.card #to-left-arrow:active {
   margin-top: 5px;
   text-shadow: 0 1px #b3aa62;
 }
 @media (min-width: 56em) {
-  .modal.card #to-left-arrow {
+  .blocker .modal.card #to-left-arrow {
     font-size: 12vh;
     text-shadow: 0 6px #b3aa62;
   }
 }
 @media (min-width: 67em) {
-  .modal.card #to-left-arrow {
+  .blocker .modal.card #to-left-arrow {
     font-size: 17vh;
     text-shadow: 0 6px #b3aa62;
   }
 }
 @media (min-width: 87.5em) {
-  .modal.card #to-left-arrow {
+  .blocker .modal.card #to-left-arrow {
     font-size: 18vh;
     text-shadow: 0 6px #b3aa62;
   }
 }
-.modal.card #to-right-arrow {
+.blocker .modal.card #to-right-arrow {
   font-size: 7vh;
   cursor: pointer;
   font-weight: 100;
@@ -570,62 +573,62 @@ nav .button.collection-button:active {
   top: 40%;
   right: 0;
 }
-.modal.card #to-right-arrow:active {
+.blocker .modal.card #to-right-arrow:active {
   margin-top: 5px;
   text-shadow: 0 1px #b3aa62;
 }
 @media (min-width: 56em) {
-  .modal.card #to-right-arrow {
+  .blocker .modal.card #to-right-arrow {
     font-size: 12vh;
     text-shadow: 0 6px #b3aa62;
   }
 }
 @media (min-width: 67em) {
-  .modal.card #to-right-arrow {
+  .blocker .modal.card #to-right-arrow {
     font-size: 17vh;
     text-shadow: 0 6px #b3aa62;
   }
 }
 @media (min-width: 87.5em) {
-  .modal.card #to-right-arrow {
+  .blocker .modal.card #to-right-arrow {
     font-size: 18vh;
     text-shadow: 0 6px #b3aa62;
   }
 }
 @media (min-width: 31em) {
-  .modal.card #to-left-arrow {
+  .blocker .modal.card #to-left-arrow {
     left: 8%;
   }
-  .modal.card #to-right-arrow {
+  .blocker .modal.card #to-right-arrow {
     right: 8%;
   }
 }
 @media (min-width: 56em) {
-  .modal.card #to-left-arrow {
+  .blocker .modal.card #to-left-arrow {
     top: 30%;
     left: 4%;
   }
-  .modal.card #to-right-arrow {
+  .blocker .modal.card #to-right-arrow {
     top: 30%;
     right: 4%;
   }
 }
 @media (min-width: 67em) {
-  .modal.card #to-left-arrow {
+  .blocker .modal.card #to-left-arrow {
     top: 20%;
     left: 2%;
   }
-  .modal.card #to-right-arrow {
+  .blocker .modal.card #to-right-arrow {
     top: 20%;
     right: 2%;
   }
 }
 @media (min-width: 87.5em) {
-  .modal.card #to-left-arrow {
+  .blocker .modal.card #to-left-arrow {
     top: 15%;
     left: 2%;
   }
-  .modal.card #to-right-arrow {
+  .blocker .modal.card #to-right-arrow {
     top: 15%;
     right: 2%;
   }
@@ -1008,12 +1011,16 @@ nav .button.collection-button:active {
 }
 
 .my-pokemon-stats {
-  width: 90vw;
-  max-width: 800px;
-  margin: 5rem auto 2rem;
-  text-align: center;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
   backdrop-filter: blur(10px);
+  position: fixed;
+  top: 10%;
+  left: 0;
+  transform: translate(calc(50vw - 50%));
+  z-index: 10;
+  width: 90vw;
+  max-width: 1000px;
+  text-align: center;
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
   border-radius: 10px;
 }
@@ -1037,8 +1044,9 @@ nav .button.collection-button:active {
 
 .my-pokemons {
   width: 100vw;
-  margin: 0 auto 15%;
-  max-width: 800px;
+  margin: 11rem auto 0;
+  padding-bottom: 20%;
+  max-width: 1000px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 }
@@ -1068,5 +1076,10 @@ nav .button.collection-button:active {
 @media (min-width: 56em) {
   .my-pokemons {
     width: 70vw;
+  }
+}
+@media (min-width: 67em) {
+  .my-pokemons {
+    margin-top: 18rem;
   }
 }
