Change text on "return to home" button

--- a/views/footer.erb
+++ b/views/footer.erb
@@ -11,7 +11,7 @@
   <% else %>
     <a class="button collection-button" href="/">
       <img src="icons/return.svg" id="collection-icon" alt="">
-      <div>トップにもどる</div>
+      <div>ホームにもどる</div>
     </a>
   <% end %>
 </nav>
