--- a/public/style.css
+++ b/public/style.css
@@ -16,8 +16,8 @@ html {
 }
 #go-to-top-container {
   background: linear-gradient(to right, #f60002, rgba(246, 0, 2, 0.4));
-  height: 3rem;
-  width: 3rem;
+  height: 5rem;
+  width: 5rem;
   position: fixed;
   border-radius: 50%;
   overflow: hidden;
@@ -28,7 +28,7 @@ html {
 }
 #go-to-top-container::before {
   content: "";
-  border: #1b1a1a 3px solid;
+  border: #1b1a1a 5px solid;
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1));
   position: absolute;
   top: 50%;
@@ -38,8 +38,8 @@ html {
 }
 #go-to-top-container .monster-ball-button {
   background: #1b1a1a;
-  height: 0.6rem;
-  width: 0.6rem;
+  height: 1rem;
+  width: 1rem;
   border-radius: 50%;
   position: absolute;
   top: 42%;
@@ -52,10 +52,168 @@ html {
   position: absolute;
   top: 25%;
   left: 25%;
-  height: 0.3rem;
-  width: 0.3rem;
+  height: 0.5rem;
+  width: 0.5rem;
 }
 @media (min-width: 56em) {
+  #go-to-top-container {
+    height: 7.5rem;
+    width: 7.5rem;
+  }
+  #go-to-top-container .monster-ball-button {
+    height: 1.5rem;
+    width: 1.5rem;
+  }
+  #go-to-top-container .monster-ball-button::before {
+    height: 0.65rem;
+    width: 0.65rem;
+    top: 30%;
+    left: 30%;
+  }
+}
+@media (min-width: 67em) {
+  #go-to-top-container {
+    height: 10rem;
+    width: 10rem;
+  }
+  #go-to-top-container .monster-ball-button {
+    height: 2rem;
+    width: 2rem;
+  }
+  #go-to-top-container .monster-ball-button::before {
+    height: 0.85rem;
+    width: 0.85rem;
+  }
+}
+#go-to-top-container #go-to-top-label {
+  color: #ffffff;
+  letter-spacing: 0;
+  text-shadow: 0px 2px 1px #003366, 0px -2px 1px #003366, -2px -2px 1px #003366, -2px 2px 1px #003366, 2px -2px 1px #003366, 2px 2px 1px #003366;
+  font-size: 1rem;
+  line-height: 1.7rem;
+  text-align: center;
+}
+#go-to-top-container.show {
+  transform: translateX(0%);
+}
+@media (min-width: 56em) {
+  #go-to-top-container {
+    background: linear-gradient(to right, #f60002, rgba(246, 0, 2, 0.4));
+    height: 4rem;
+    width: 4rem;
+    position: fixed;
+    border-radius: 50%;
+    overflow: hidden;
+    right: 3rem;
+  }
+  #go-to-top-container::before {
+    content: "";
+    border: #1b1a1a 4px solid;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1));
+    position: absolute;
+    top: 50%;
+    left: -30%;
+    height: 100vh;
+    width: 100vw;
+  }
+  #go-to-top-container .monster-ball-button {
+    background: #1b1a1a;
+    height: 0.8rem;
+    width: 0.8rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 42%;
+    left: 42%;
+  }
+  #go-to-top-container .monster-ball-button::before {
+    content: "";
+    background: linear-gradient(to right bottom, #ffb7b7, rgba(255, 183, 183, 0.6));
+    border-radius: 50%;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    height: 0.4rem;
+    width: 0.4rem;
+  }
+}
+@media (min-width: 56em) and (min-width: 56em) {
+  #go-to-top-container {
+    height: 6rem;
+    width: 6rem;
+  }
+  #go-to-top-container .monster-ball-button {
+    height: 1.2rem;
+    width: 1.2rem;
+  }
+  #go-to-top-container .monster-ball-button::before {
+    height: 0.52rem;
+    width: 0.52rem;
+    top: 30%;
+    left: 30%;
+  }
+}
+@media (min-width: 56em) and (min-width: 67em) {
+  #go-to-top-container {
+    height: 8rem;
+    width: 8rem;
+  }
+  #go-to-top-container .monster-ball-button {
+    height: 1.6rem;
+    width: 1.6rem;
+  }
+  #go-to-top-container .monster-ball-button::before {
+    height: 0.68rem;
+    width: 0.68rem;
+  }
+}
+@media (min-width: 56em) {
+  #go-to-top-container #go-to-top-label {
+    line-height: 2.2rem;
+  }
+}
+@media (min-width: 67em) {
+  #go-to-top-container {
+    background: linear-gradient(to right, #f60002, rgba(246, 0, 2, 0.4));
+    height: 3rem;
+    width: 3rem;
+    position: fixed;
+    border-radius: 50%;
+    overflow: hidden;
+    right: 7rem;
+    bottom: 1rem;
+    transform: translateX(300%);
+  }
+  #go-to-top-container::before {
+    content: "";
+    border: #1b1a1a 3px solid;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.1));
+    position: absolute;
+    top: 50%;
+    left: -30%;
+    height: 100vh;
+    width: 100vw;
+  }
+  #go-to-top-container .monster-ball-button {
+    background: #1b1a1a;
+    height: 0.6rem;
+    width: 0.6rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 42%;
+    left: 42%;
+  }
+  #go-to-top-container .monster-ball-button::before {
+    content: "";
+    background: linear-gradient(to right bottom, #ffb7b7, rgba(255, 183, 183, 0.6));
+    border-radius: 50%;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    height: 0.3rem;
+    width: 0.3rem;
+  }
+}
+@media (min-width: 67em) and (min-width: 56em) {
   #go-to-top-container {
     height: 4.5rem;
     width: 4.5rem;
@@ -71,7 +229,7 @@ html {
     left: 30%;
   }
 }
-@media (min-width: 67em) {
+@media (min-width: 67em) and (min-width: 67em) {
   #go-to-top-container {
     height: 6rem;
     width: 6rem;
@@ -85,16 +243,10 @@ html {
     width: 0.51rem;
   }
 }
-#go-to-top-container #go-to-top-label {
-  color: #ffffff;
-  letter-spacing: 0;
-  text-shadow: 0px 2px 1px #003366, 0px -2px 1px #003366, -2px -2px 1px #003366, -2px 2px 1px #003366, 2px -2px 1px #003366, 2px 2px 1px #003366;
-  font-size: 0.5rem;
-  line-height: 1.1rem;
-  text-align: center;
-}
-#go-to-top-container.show {
-  transform: translateX(0%);
+@media (min-width: 67em) {
+  #go-to-top-container #go-to-top-label {
+    line-height: 2.2rem;
+  }
 }
 
 html {
