--- a/views/home.erb
+++ b/views/home.erb
@@ -18,6 +18,8 @@
         <img src="info/my-pokemon.png" alt="" height="30"> ボタンをタップして、これまでクイズでゲットしてきたポケモンがかくにんできるよ！<br>
         ポケモンぜんしゅるいゲットをめざそう！
       </p>
+      <div class="indicator" id="indicator-1">> > ></div>
+      <div class="indicator" id="indicator-2">> > ></div>
     </section>
   </article>
 </aside>
