--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ポケモン図鑑</title>
+  <title><%=@page_title ? "#{@page_title} - ポケモンずかん" : "ポケモンずかん"%></title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
   <link rel=”icon” href=“favicon.ico”>
